# fiat

./: .buildinfo  .gitignore  FIAT.html  finat.html  finat.ufl.html  gem.html  genindex.html  index.html  installation.html  manual.html  objects.inv  py-modindex.html  pyproject.toml  releases.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  pythonapp.yml
FIAT/: P0.py  Sminus.py  SminusCurl.py  SminusDiv.py  __init__.py  alfeld.py  alfeld_sorokina.py  argyris.py  arnold_qin.py  arnold_winther.py  barycentric_interpolation.py  bernardi_raugel.py  bernstein.py  brezzi_douglas_fortin_marini.py  brezzi_douglas_marini.py  brezzi_douglas_marini_cube.py  check_format_variant.py  christiansen_hu.py  crouzeix_raviart.py  discontinuous_lagrange.py  discontinuous_pc.py  discontinuous_raviart_thomas.py  dual_set.py  expansions.py  fdm_element.py  finite_element.py  functional.py  gauss_legendre.py  gauss_lobatto_legendre.py  guzman_neilan.py  hct.py  hdiv_trace.py  hellan_herrmann_johnson.py  hierarchical.py  hsieh_clough_tocher.py  jacobi.py  johnson_mercier.py  lagrange.py  macro.py  morley.py  (+15 more)
_modules/: index.html
_modules/FIAT/: P0.html  (+66 more)
_sources/: FIAT.rst.txt  finat.rst.txt  gem.rst.txt
_static/: documentation_options.js
docs/: Makefile
finat/: __init__.py  element_factory.py  fiat_elements.py  physically_mapped.py  point_set.py  tensor_product.py
gem/: gem.py  utils.py
releases/: next.html  v1.6.0.html  v2016.1.0.html  v2016.2.0.html  v2017.1.0.html  v2017.1.0.post1.html  v2017.2.0.html  v2018.1.0.html  v2019.1.0.html
(+82 files in other folders)
